--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,14 @@
 /tests
 /templates
 /components
-*private*
-*solutions*
-*planning*
-*skills*
-*outreach*
-*infrastructure*
-*common_other*
+/phoneContent
+/private*
+/solutions
+/planning
+/skills
+/outreach
+/infrastructure
+/common_other
 *template*
 *tst*
 */vids
